--- a/Regression_tree.qmd
+++ b/Regression_tree.qmd
@@ -8,6 +8,7 @@ library(tidyverse)
 library(tidymodels)
 library(vroom)
 library(ggplot2)
+library(ranger)
 ```
 
 ```{r}
@@ -38,54 +39,60 @@ bakedBike <- recipe(trainData)
 ```
 
 ```{r}
-#regresion tree
-tree_model <- rand_forest(mtry = tune(),
-                          min_n = tune(),
-                          trees = 500) %>%
+#random forest
+rf_model <- rand_forest(mtry = tune(),
+                        min_n = tune(),
+                        trees = 500) %>%
   set_engine("ranger") %>%
   set_mode("regression")
 
-#workflow for the tree model
-tree_wf <- workflow() %>%
-  add_recipe(bike_recipe) %>% # Reuse the same recipe
-  add_model(tree_model)
+#workflow for the forest model
+rf_wf <- workflow() %>%
+  add_recipe(bike_recipe) %>% 
+  add_model(rf_model)
+
+#kfolds for cv
+folds <- vfold_cv(trainData, v = 10, repeats = 1) 
 ```
 
 ```{r}
 #grid of tuning values for the tree
-tree_grid <- grid_regular(mtry(range=c(1,8)),
-                          levels=4)
+rf_grid <- grid_regular(
+  mtry(range = c(1, 8)),
+  min_n(range = c(2, 40)),
+  levels = 4
+)
 
 #cross-validation tuning for the tree model
-tree_CV_results <- tree_wf %>%
+rf_CV_results <- rf_wf %>%
   tune_grid(
-    resamples = folds, # Reuse the same folds
-    grid = tree_grid,
+    resamples = folds,
+    grid = rf_grid,
     metrics = metric_set(rmse, mae)
   )
 ```
 
 ```{r}
 # tuning parameters based on RMSE
-bestTreeTune <- tree_CV_results %>%
+bestTune <- rf_CV_results %>%
   select_best(metric = "rmse")
 
-print(bestTreeTune)
+print(bestTune)
 ```
 
 ```{r}
 # final workflow with the best tree tuning parameters
-final_tree_wf <- tree_wf %>%
-  finalize_workflow(bestTreeTune)
+final_rf_wf <- rf_wf %>%
+  finalize_workflow(bestTune)
 
 # Fit the final workflow on the training data
-final_tree_fit <- fit(final_tree_wf, data = trainData)
+final_rf_fit <- fit(final_rf_wf, data = trainData)
 
 # predict on the test data
-tree_predictions <- predict(final_tree_fit, new_data = testData)
+rf_predictions <- predict(final_rf_fit, new_data = testData)
 
 # submission file
-submission_tree <- tree_predictions %>%
+submission_rf <- rf_predictions %>%
   mutate(.pred = pmax(0, round(expm1(.pred)))) %>%
   rename(count = .pred) %>%
   bind_cols(testData %>% select(datetime)) %>%
@@ -93,7 +100,7 @@ submission_tree <- tree_predictions %>%
   mutate(datetime = format(as.POSIXct(datetime, tz = "UTC"), "%Y-%m-%d %H:%M:%S"))
 
 # export submission file
-vroom::vroom_write(submission_tree, "submission_tree.csv", delim = ',')
+vroom::vroom_write(submission_rf, "submission_rf.csv", delim = ',')
 ```
 
 \
